--- a/scss/blocks/_blocks.scss
+++ b/scss/blocks/_blocks.scss
@@ -1,5 +1,6 @@
 @import "header";
 @import "navbar";
 @import "hero";
-@import "footer";
 @import "collection";
+@import "choose";
+@import "footer";
