--- a/css/main.css
+++ b/css/main.css
@@ -871,4 +871,8 @@ body {
   line-height: 15px; /* 125% */
   letter-spacing: 0.923px;
   text-transform: uppercase;
+  transition: all 0.4s ease;
+}
+.footer-item-link:hover {
+  color: #333D4B;
 }/*# sourceMappingURL=main.css.map */
